--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -9,7 +9,7 @@
     <script type='text/javascript' src='/assets/lib/flot/jquery.flot.js'></script>
     <script type='text/javascript' src='/assets/javascripts/index.js'></script>
 </head>
-<body data-http-url="http://localhost:8080/ws" data-ws-url="ws://localhost:8080/ws">
+<body data-http-scheme="http://" data-http-path="/ws" data-ws-scheme="ws://" data-ws-path="/ws">
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
